nextcloud/basic/nextcloud-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: nextcloud-svc
   namespace: nextcloud
   labels:
      app: nextcloud
spec:
   selector:
      pod-label: nextcloud-mysql
   ports:
   - protocol: TCP
     port: 3306
