nextcloud/basic/nextcloud-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: nextcloud-ui-svc
 namespace: nextcloud
 labels:
   app: nextcloud
spec:
 type: LoadBalancer
 ports:
 - port: 80
   protocol: TCP
 selector:
   pod-label: nextcloud-server-pod
